Modified security config to better adjust to security requirements, modified secret key and jwtService, modifies method names on repositories to comply with requirements, added missing security config to openapi.yml
